--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 ---
 layout: home
 description: "Blog de tutoriales y recursos prácticos que acompañan al canal de YouTube de Kajii Narumi. Aprende mejor con guías escritas."
+limit: 10
+show_excerpts: true
+entries_layout: list
 ---
 
-  <div class="pagination">
-    {% if paginator.previous_page %}
-      <a href="{{ paginator.previous_page_path }}">Entradas más recientes</a>
-    {% endif %}
-    {% if paginator.next_page %}
-      <a href="{{ paginator.next_page_path }}">Entradas anteriores</a>
-    {% endif %}
-  </div>
-{% else %}
-  <p>No se encontró paginación activa. Revisa tu _config.yml.</p>
-{% endif %}
+{% paginator %}
