--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: home
-description: "Blog de tutoriales y recursos prácticos que acompañan al canal de YouTube de Kajii Narumi. Aprende mejor con guías escritas."
+title: "Blog de tutoriales y recursos prácticos que acompañan al canal de YouTube de Kajii Narumi. Aprende mejor con guías escritas."
+paginate: true
 show_excerpts: true
 entries_layout: list
 ---
