--- a/notes.html
+++ b/notes.html
@@ -1,16 +1,16 @@
 ---
 layout: page
-title: "Notes"
-permalink: /notes/
+title: "Asuntos"
+permalink: /asuntos/
 robots: noindex, nofollow
 ---
 
 <h2>Microblog del proyecto</h2>
-<div id="github-issues-feed">Cargando notas...</div>
+<div id="github-issues-feed">Cargando asuntos...</div>
 <div id="github-pagination" style="margin-top:2em;"></div>
 <script>
 const repo = "KajiiNarumi/Blog";
-const perPage = 10; // Cambia este número si quieres más/menos notas por página
+const perPage = 10;
 let currentPage = 1;
 
 function escapeHtml(str) {
@@ -23,24 +23,52 @@ function escapeHtml(str) {
     .replace(/'/g, "&#039;");
 }
 
+function getTextColor(hexColor) {
+  if (!hexColor) return "#333";
+  let r = parseInt(hexColor.substr(0,2),16),
+      g = parseInt(hexColor.substr(2,2),16),
+      b = parseInt(hexColor.substr(4,2),16);
+  let yiq = ((r*299)+(g*587)+(b*114))/1000;
+  return (yiq >= 128) ? '#222' : '#fff';
+}
+
+function renderLabels(labels) {
+  return labels.map(label =>
+    `<span class="label" style="background:#${label.color};color:${getTextColor(label.color)};
+      display:inline-block; padding:2px 8px; border-radius:3px; font-size:0.8em; margin-right:4px; margin-bottom:2px;">
+      ${escapeHtml(label.name)}
+    </span>`
+  ).join(' ');
+}
+
 function renderIssues(issues) {
   let html = "";
   if (issues.length === 0) {
-    html = "<p>No hay notas aún.</p>";
+    html = "<p>No hay asuntos aún.</p>";
   } else {
     issues.forEach(issue => {
+      const meta = issue.milestone ? escapeHtml(issue.milestone.title) : "Sin meta";
+      const estado = issue.state === "closed"
+        ? '<span style="color:#d73a4a; font-weight:bold;">Cerrado</span>'
+        : '<span style="color:#28a745; font-weight:bold;">Abierto</span>';
+      const labels = renderLabels(issue.labels || []);
       html += `
-      <div class="note-issue" style="border:1px solid #eee; padding:1em; margin-bottom:2em;">
+      <div class="note-issue" style="border:1px solid #eee; padding:1em; margin-bottom:2em; background:#fff; border-radius:8px;">
         <div>
           <img src="${issue.user.avatar_url}" alt="${issue.user.login}" style="width:32px;border-radius:50%;vertical-align:middle;">
           <strong>${escapeHtml(issue.user.login)}</strong>
           <span style="color:#888;">${new Date(issue.created_at).toLocaleString()}</span>
         </div>
+        <div style="margin-top:0.3em;">
+          <span class="milestone" style="font-size:0.9em; color:#0075ca;">Meta: <b>${meta}</b></span>
+        </div>
+        <div class="labels" style="margin-bottom:0.7em;">${labels}</div>
         <h3 style="margin-top:0.5em;">${escapeHtml(issue.title)}</h3>
         <div>${issue.body ? escapeHtml(issue.body).replace(/\n/g,"<br>") : ""}</div>
         <div style="margin-top:1em;">
           <a href="${issue.html_url}" target="_blank">Comentar en GitHub</a>
         </div>
+        <div style="margin-top:0.5em;">${estado}</div>
         <div class="issue-comments" id="comments-${issue.number}" style="margin-top:1em; font-size:0.9em; color:#444;">Cargando comentarios...</div>
       </div>
       `;
@@ -63,19 +91,19 @@ function renderPagination(hasPrev, hasNext) {
 
 function loadIssues(page) {
   currentPage = page;
-  document.getElementById('github-issues-feed').innerHTML = "Cargando notas...";
+  document.getElementById('github-issues-feed').innerHTML = "Cargando asuntos...";
   fetch(`https://api.github.com/repos/${repo}/issues?state=open&per_page=${perPage}&page=${currentPage}`)
     .then(r => r.json())
     .then(issues => {
       renderIssues(issues);
-      // Verifica si hay más notas (para mostrar botón "Siguiente")
+      // Verifica si hay más asuntos (para mostrar botón "Siguiente")
       fetch(`https://api.github.com/repos/${repo}/issues?state=open&per_page=${perPage}&page=${currentPage + 1}`)
         .then(r => r.json())
         .then(nextIssues => {
           renderPagination(currentPage > 1, nextIssues.length > 0);
         });
       issues.forEach(issue => {
-        // Obtiene los comentarios de cada Issue:
+        // Obtiene los comentarios de cada Asunto:
         fetch(`https://api.github.com/repos/${repo}/issues/${issue.number}/comments`)
           .then(r => r.json())
           .then(comments => {
